# eidos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  redis-client.py
include/eidos/: result.hpp  types.hpp  version.hpp
src/: context.hpp  main.cc  request.hpp  server.cc  server.hpp  tcp.hpp
src/storage/: dirstore.hpp  memstore.hpp  raft.hpp  storage_base.hpp
test/: result.cc
